--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ flask = "^3.0.0"
 gunicorn = "^21.2.0"
 nbformat = "^5.10.4"
 nbconvert = "^7.16.6"
+markdown = "^3.7"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
